--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,6 @@
     <title>Football stats</title>
   </head>
   <body>
-    <div id="root" style="min-height: 100%"></div>
+    <div id="root" style="min-height: 100%; display: flex; flex-direction: column"></div>
   </body>
 </html>
